# airspyhf

./: CMakeLists.txt  README.md  genGitVersion.sh
cmake/modules/: FindLIBAIRSPY.cmake  FindUSB1.cmake
libairspyhf/: CMakeLists.txt  airspyhf.sln  airspyhf.vcxproj  libairspyhf.pc.in
libairspyhf/src/: CMakeLists.txt  airspyhf.c  airspyhf.h  airspyhf_commands.h  git_version.c.in  git_version.h  iqbalancer.c  iqbalancer.h
tools/: 52-airspyhf.rules  CMakeLists.txt
tools/getopt/: LICENSE.md
tools/src/: CMakeList.txt  CMakeLists.txt  README  Windows Instructions  airspyhf_calibrate.c  airspyhf_gpio.c  airspyhf_info.c  airspyhf_lib_version.c  airspyhf_rx.c
